objects/ssot__HealthcareFacilityService__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareFacilityId__c</fullName>
        <label>Healthcare Facility</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareServiceId__c</fullName>
        <label>Healthcare Service</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Healthcare Facility Service Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1742526793562_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareFacilityService_Healthcare_rel</label>
        <referenceTo>ssot__HealthcareService__dlm</referenceTo>
        <relationshipLabel>HealthcareFacilityService_Healthcare_rel</relationshipLabel>
        <relationshipName>rel_1742526793562_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1742526801915_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareFacilityService_Healthcare_rel</label>
        <referenceTo>ssot__HealthcareFacility__dlm</referenceTo>
        <relationshipLabel>HealthcareFacilityService_Healthcare_rel</relationshipLabel>
        <relationshipName>rel_1742526801915_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>